# bigweld-portal

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hook-scripts/: graph-awareness.sh  instructions-loaded.sh  memory-recall.sh  post-tool-use.sh  session-start.sh  stop.sh  user-prompt-submit.sh
backend/: auth.py  main.py  metrics.py
backend/api/: budget.py  conversations.py  output.py  render.py  summarize.py  upload.py
backend/core/: assistant_blocks.py  config.py  conversation_store.py  llm_router.py  request_body.py  stream_parser.py  subprocess_mgr.py  summarizer.py
backend/tests/: conftest.py  test_api_conversations.py  test_api_output_budget.py  test_api_render.py  test_api_upload.py  test_assistant_blocks.py  test_auth.py  test_conversation_store.py  test_health.py  test_llm_router.py  test_metrics.py  test_stream_parser.py  test_subprocess_mgr.py  test_summarizer.py
backend/v2/: config.py  main.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: chatStore.test.ts  chatSurface.test.ts  setup.ts  smoke.test.tsx
frontend/v2/: index.html
memory/: working-with-alex.md  world-model.md
scripts/: convert_fonts.py  deploy_systemd.sh  extract_palette.py  spike_resume.sh  test_extract_palette.py
skills/atrisk/: SKILL.md
skills/citations/: SKILL.md
skills/dupes/: SKILL.md
skills/gaps/: SKILL.md
skills/graph/: SKILL.md
skills/orphans/: SKILL.md
systemd/: bigweld-portal.service
(+165 files in other folders)
